--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="bg-slate-50 dark:bg-gray-800 text-gray-950 dark:text-slate-200"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
