--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		%sveltekit.head%
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover" class="bg-slate-50 dark:bg-gray-800 text-gray-950 dark:text-slate-200">
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
-
+	<body
+		data-sveltekit-preload-data="hover"
+		class="bg-slate-50 dark:bg-gray-800 text-gray-950 dark:text-slate-200"
+	>
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
